Fixed two typos in asprin section

--- a/prefopt.tex
+++ b/prefopt.tex
@@ -268,7 +268,7 @@ This yields only the three optimal answer sets not containing \code{c(1)}.
 \index{optimization!preference specification!preference element}%
 \index{optimization!optimization directive}%
 
-The input language of \asprin extends the one described in Section~\ref{sec:language} by constructs for expressing qualitative and quantitative preferences.
+The input language of \asprin\ extends the one described in Section~\ref{sec:language} by constructs for expressing qualitative and quantitative preferences.
 
 A \emph{weighted formula} is of the form
 \[\boldsymbol{t}\code{::}F\]
@@ -549,7 +549,7 @@ the statement would not be admissible any more.
 \index{preference type!\code{aso}}
 \index{preference type!\code{poset}}
 \index{preference type!\code{cp}}
-The preference library of \asprin implements the following basic preference types:
+The preference library of \asprin\ implements the following basic preference types:
 \begin{itemize}
 	\item  \code{subset} and \code{superset}   
 	\item  \code{less(cardinality)} and \code{more(cardinality)}   
