--- a/theory.tex
+++ b/theory.tex
@@ -8,7 +8,7 @@ Information on theory solving with \clingo\ can be obtained at the following ref
 \begin{itemize}
 \item Literature: \cite{gekakaosscwa16a,kascwa17a}
 \item Examples: \code{/examples/clingo/} in \gringo/\clingo\ distribution
-\item API reference: \url{http://potassco.org/clingo}
+\item API reference: \url{https://potassco.org/clingo}
 \end{itemize}
 
 \subsection{ASP and Difference Constraints}
@@ -25,7 +25,7 @@ Here, $x$ and $y$ may be terms as described in Section~\ref{subsec:lang:gringo},
 and $k$ is an integer.
 Difference constraint atoms may occur in bodies as well as in heads of rules.
 For a more formal introduction of \clingoM{DL}, please see \cite{jakaosscscwa17a}.
-The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{http://github.com/potassco/clingoDL}.
+The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{https://github.com/potassco/clingoDL}.
 
 
 \subsubsection{Modeling and Solving with \clingoM{DL}}
