--- a/prefopt.tex
+++ b/prefopt.tex
@@ -277,7 +277,7 @@ and $F$ is a either a Boolean formula
 or a naming atom.
 We may drop \code{::} and simply write $F$ whenever $\boldsymbol{t}$ is empty.
 If $F$ is missing\footnote{Note that empty weighted formulas are not allowed.},
-we interpret is as the Boolean constant \code{\#true}.
+we interpret it as the Boolean constant \code{\#true}.
 Boolean formulas are formed from atoms, possibly preceded by classical negation (`\code{-}'),
 using the connectives \code{not} (default negation), \code{\&} (conjunction) and \code{|} (disjunction).
 Parentheses can be written as usual\footnote{Except that they are not allowed around atoms.},
